src/test/custom/invalid/struct/structElemRedeclare.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int b, char b}
  skip
end